# ast-tools

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEBASE_MAP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISTRIBUTION_PACKAGE.md  Dockerfile  LICENSE  Makefile  PULL_REQUEST.md  README.md  RESEARCH_HERMES_MCP_CONTEXT_INJECTION.md  SECURITY.md  SETUP_INSTRUCTIONS.md  SUPPORT.md  WORKFLOW_SUMMARY_2026-07-24.md  ast-tools-doc-review-context.txt  go.sh  governance.yaml  project.json  pyproject.toml  setup.cfg
.ast-tools/models/: model_registry.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yaml  ci.yml  codeql.yml  publish.yml  pylint.yml  release.yaml  release.yml  security-audit.yaml
deploy/: .dockerignore  Dockerfile  README.md  install-daemon.sh  rw-ast-tools.service
docs/: AST_TOOLS_QUICKSTART.md  AUDITS_HISTORY.md  AUDIT_MEDIUM_20260628.md  CLI_REFERENCE.md  COMPETITIVE_FEATURE_PARITY_20260628.md  DOCUMENTATION_INDEX.md  ENHANCED_DEAD_CODE.md  KANBAN_SECURITY_PHASE0.md  MARKET_ANALYSIS_2026.md  PHASE10A_SPEC.md  PHASE10A_SYNTHESIS.md  PHASE9_COMPLETE.md  PHASE_SUMMARIES.md  PLANS_HISTORY.md  PLUGIN_ENHANCEMENTS_SPEC.md  PLUGIN_IMPLEMENTATION_PLAN.md  REPORTS_HISTORY.md  SCOPE.md  SECURITY_AUDIT_CLI_DEADCODE_20260628.md  SESSION_STATE.md  SPECS_HISTORY.md  STATE.md  STRATEGIC_RECOMMENDATIONS.md  TROUBLESHOOTING.md  USAGE_RULES.md  phase8-context-injection-spec.md  phase8-forward-audit.md  phase8-reverse-audit-1.md
docs/adrs/: 0009-reranker-integration.md  0010-architecture-governance-engine.md  0011-pypi-name-decision-and-publishing-pipeline.md  0012-server-architecture-multi-mode.md
docs/archive/: EASY_WINS_REVERSE_AUDIT.md  EASY_WINS_SPEC_20260628.md  NEW_TOOL_CONCEPTS.md  PHASE10A_PLAN.md  PHASE10A_SYNTHESIS.md  PHASE9_COMPLETE.md  PROJECT_STATE.md  REFACTORING_JOURNAL.md  SESSION_STATE.md
docs/audits/: forward-audit-semantic-db-phase1-v1.md  forward-audit-semantic-db-phase2-v2.md  phase8-reverse-audit-2.md  phase9-forward-audit.md  phase9-reverse-audit.md  phase9-synthesis.md  reverse-audit-semantic-db-phase1-v1.md  synthesis-phase1-v1.md
docs/editors/: neovim.md  other.md  vscode.md  zed.md
docs/plans/: 2026-07-19-daemon-uds-inference-integration.md  EASY_WINS_PLAN_v1.md  F4_VSCODE_EXT_PLAN.md  F5_LLM_FIX_IMPL_PLAN.md  category-deployment-launch.md  incremental-indexing-v1.md  phase-a-ship.md  phase-a-tool-discovery.md  phase-b-governance.md  phase-c-killer-features.md  phase-d-hermes-integration.md  phase-d-launch.md  phase10-1-transitive-imports.md  phase10a-repo-skeleton-file-related.md  phase5-test-completion.md  phase6f-true-6factor-rrf.md  phase7-performance-optimization.md  phase7-remaining.md  phase8-synthesis-plan.md  phase9-implementation-plan.md  refactor-modular-plan-v1.md  semantic-db-phase1-v1.md  semantic-db-phase2-v2.md  server-architecture-redesign-v1.md  testing-infrastructure-improvements.md
docs/portal/: README.md  index.html
docs/reports/: EASY_WINS_SYNTHESIS_v2.md  MARKET_ANALYSIS.md  cleanup-report-2026-06-27.md  documentation-audit-report-2026-06-27.md  incremental-indexing-synthesis.md  phase6f-implementation-report.md  server-architecture-completion.md
docs/research/: embedding-relevance-scoring.md  god-tier-enhancements.md  multilspy-integration-analysis.md  semantic-database-research.md
docs/roadmap/: ROADMAP.md
docs/specs/: AUDIT_CONSOLIDATION_COMPLETE.md  CONSTANTS_AUDIT.md  F4_IMPLEMENTATION_PLAN.md  F4_LSP_SERVER_SPEC.md  F4_PHASE1_IMPL_PLAN.md  F4_PHASE1_LSP_CORE.md  F4_PHASE2_CODE_ACTIONS.md  F4_PHASE3_FORMATTING_SEMANTIC.md  F4_PHASE4_EDITOR_INTEGRATION.md  F4_PHASE5_POLISH_RELEASE.md  F5_LLM_FIX_SYSTEM_SPEC.md  INDEX_AUDIT_SUMMARY.md  INDEX_CONSOLIDATION.md  REAL_BENCHMARKS.md  SYNTHESIS_2026-07-02.md  TOOLING_SPEC.md  VECTOR_DB_DECISION.md  audit-synthesis-v3.md  category-b-governance.md  category-c-autofix-and-reporter.md  immutable-tool-cache-v3.md  incremental-indexing-v1.md  phase10-2-class-hierarchy-v1.md  phase10-3-blast-radius-v2.md  phase5-knowledge-graph-v1.md  phase6-co-change-v1.md  phase6f-true-6factor-rrf.md  phase8b-spec.md  phase9-spec.md  refactor-modular-v1.md  semantic-db-phase1-v1.md  semantic-db-phase2-v2.md  server-architecture-redesign-v1.md  server-architecture-synthesis-v1.md  spectral-clustering-improvements.md  tool-discovery-v1.md
docs/split-context/: part_aa.txt  part_ab.txt  part_ac.txt  part_ad.txt  part_ae.txt  part_af.txt  part_ag.txt  part_ah.txt
hermes-plugins/: INSTALL.md  README.md  USAGE.md
hermes-plugins/ast-tools-codebase-index/: README.md  __init__.py  plugin.yaml
hermes-plugins/ast-tools-context/: README.md  __init__.py  plugin.yaml
hermes-plugins/ast-tools-tokens/: README.md  __init__.py  plugin.yaml
hermes-plugins/docs/: configuration.md  hooks.md
hermes-plugins/rw-ast-tools/: __init__.py  plugin.yaml
hermes-plugins/scripts/: install-all.sh  install.sh  uninstall.sh  verify.sh
references/: .file_hashes.json  dependency_graph.json  symbol_index.json
research/: audit_findings.json  audit_implementation_plan.md
research/thought_experiments/: c1_auto_fix_design.md  multi_language_auto_fix.md
scripts/: ast-tools  publish.sh
skills/: ast-tools.skill.md
skills/claude/: CLAUDE.md
src/: ast_tools_server.py  project_tools.py  ts_backend.py
test_mcp_fix/: temp.py
tests/: conftest.py  smoke_test.py  test_cli.py  test_diff.py  test_e2e.py  test_enhanced_dead_code.py  test_incremental_index.py  test_llm_client.py  test_llm_diff_parser.py  test_llm_prompts.py  test_llm_suggest_fix.py  test_phase3_polish.py  test_plugin_system.py  test_project_tools.py  test_remote_mode.py  test_security.py  test_spectral.py
(+222 files in other folders)
