[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ast-tools"
version = "0.1.0"
description = "MCP server for structural code analysis and editing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "ZOO"},
]
dependencies = [
    "anyio>=4.0",
    "libcst>=1.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
tree-sitter = [
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
]

[project.scripts]
ast-tools-server = "ast_tools_server:main"
ast-tools-project = "project_tools:cli_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
