[metadata]
name = ast-tools
version = 0.1.0

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    anyio>=4.0
    libcst>=1.0
    mcp>=1.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ast-tools-server = ast_tools_server:main
    ast-tools-project = project_tools:cli_main

[options.extras_require]
tree-sitter =
    tree-sitter>=0.23
    tree-sitter-python>=0.23
